src/main/default/objects/Vehicle__c/Vehicle__c.object-meta.xml
<CustomObject>
    <label>Vehicle</label>
    <nameField>
        <displayFormat>VEH-{0000}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>