src/main/default/objects/Vehicle__c/fields/AssociatedDepot__c.field-meta.xml
<CustomField>
    <fullName>AssociatedDepot__c</fullName>
    <inlineHelpText>The Depot associated with this vehicle.</inlineHelpText>
    <label>Associated Depot</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DepotValues</valueSetName>
    </valueSet>
</CustomField>