src/main/default/objects/Vehicle__c/fields/DirectVisionStandard__c.field-meta.xml
<CustomField>
    <fullName>DirectVisionStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For England only.</inlineHelpText>
    <label>Direct Vision Standard</label>
    <type>Checkbox</type>
</CustomField>