src/main/default/objects/Vehicle__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Driver associated with this vehicle.</inlineHelpText>
    <label>Driver</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user is not a Driver (need to add Driver as this user&apos;s role).</errorMessage>
        <filterItems>
            <field>User.UserRole.DeveloperName</field>
            <operation>equals</operation>
            <value>Driver</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Vehicles</relationshipName>
    <type>Lookup</type>
</CustomField>