src/main/default/objects/Vehicle__c/fields/LoadCapacityWeight__c.field-meta.xml
<CustomField>
    <fullName>LoadCapacityWeight__c</fullName>
    <inlineHelpText>The Weight Load Capacity of this vehicle.</inlineHelpText>
    <label>Load Capacity (Weight)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>