src/main/default/objects/Vehicle__c/fields/LoadLimitCases__c.field-meta.xml
<CustomField>
    <fullName>LoadLimitCases__c</fullName>
    <inlineHelpText>The Cases Load Limit of this vehicle.</inlineHelpText>
    <label>Load Limit (Cases)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>