src/main/default/objects/Vehicle__c/fields/Operational__c.field-meta.xml
<CustomField>
    <fullName>Operational__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if vehicle is still in use.</inlineHelpText>
    <label>Operational?</label>
    <type>Checkbox</type>
</CustomField>