src/main/default/objects/Vehicle__c/fields/VehicleRegistration__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistration__c</fullName>
    <inlineHelpText>Vehicle Registration in format = &quot;AA11 AAA&quot;.</inlineHelpText>
    <label>Vehicle Registration</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>