src/main/default/objects/Vehicle__c/validationRules/MinimumCharactersOnVehicleRegistration.validationRule-meta.xml
<ValidationRule>
    <fullName>MinimumCharactersOnVehicleRegistration</fullName>
    <active>true</active>
    <description>Vehicle Registration must a have a minimum of 8 characters.</description>
    <errorConditionFormula>IF(LEN(VehicleRegistration__c) &lt; 8, true, false)</errorConditionFormula>
    <errorMessage>Vehicle Registration field must a have a minimum of 8 characters (including 1 space)</errorMessage>
</ValidationRule>