src/main/default/objects/Vehicle__c/listViews/NonOperationalVehicles.listView-meta.xml
<ListView>
    <fullName>NonOperationalVehicles</fullName>
    <columns>NAME</columns>
    <columns>VehicleRegistration__c</columns>
    <columns>LoadCapacityWeight__c</columns>
    <columns>LoadLimitCases__c</columns>
    <columns>DirectVisionStandard__c</columns>
    <columns>AssociatedDepot__c</columns>
    <columns>Driver__c</columns>
    <columns>Operational__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Operational__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Non-operational Vehicles</label>
</ListView>